Add header, update donut page

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <!-- Projects -->
         <h1>Other Projects</h1>
         <section class="projects">
-           
+
 
             <article class="project_item">
                 <div>
@@ -256,13 +256,15 @@
         <div style="background-color: black; position:fixed; bottom:0; width: 100%; padding: 12px;">
             <h1 style="color: white;">Contact</h1>
             <p style="color: white;">I am actively looking for Intern/Fresher Mobile Developer job</p>
-            <div class="project_row" style="color: white;">
-                <p>Phone number:</p>
-                <p>(+84) 582 814 653</p>
-            </div>
-            <div class="project_row" style="color: white;">
-                <p>Email:</p>
-                <p>trandang210799@gmail.com</p>
+            <div style="width: 30%;">
+                <div class="project_row" style="color: white;">
+                    <p>Phone number:</p>
+                    <p>(+84) 582 814 653</p>
+                </div>
+                <div class="project_row" style="color: white;">
+                    <p>Email:</p>
+                    <p>trandang210799@gmail.com</p>
+                </div>
             </div>
         </div>
     </footer>
