--- a/pages/florist_project_page.html
+++ b/pages/florist_project_page.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
+    <div class="header_project">
+        <a href="../index.html"><img src="../images/ic_home.svg" width="30" height="30" alt="" class="icon_back"></a>
+        <h1 style="text-align: center;">Florist Shop</h1>
+    </div>
+    
     <main>
-        <h1>Information</h1>
+        <h2>Information</h2>
         <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
             <h3>Personal Project</h3>
             <div class="project_row">
@@ -38,11 +43,12 @@
             <div class="project_row">
                 <p>Description:</p>
                 <p>This is an app about selling flowers, bouquet. The layout is based on <a target="_blank"
-                        href="https://www.figma.com/community/file/1236066798155280173/e-commerce-mobile-app-florist?searchSessionId=lsb9pp81-dh3z8033219">Figma - Ivana’s little design world</a> </p>
+                        href="https://www.figma.com/community/file/1236066798155280173/e-commerce-mobile-app-florist?searchSessionId=lsb9pp81-dh3z8033219">Figma
+                        - Ivana’s little design world</a> </p>
             </div>
         </div>
 
-        <h1>Installation</h1>
+        <h2>Installation</h2>
         <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
             <div class="project_row">
                 <p>Step 1:</p>
@@ -69,13 +75,18 @@
         </div>
 
         <!-- <h1>Video</h1> -->
-        <h1>Screenshots</h1>
+        <h2>Screenshots</h2>
         <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_1.jpg" width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_2.jpg" width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_3.jpg" width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_4.jpg" width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_5.jpg" width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_1.jpg"
+                width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_2.jpg"
+                width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_3.jpg"
+                width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_4.jpg"
+                width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_5.jpg"
+                width="200" alt="">
         </div>
     </main>
     </main>
