--- a/pages/laptop_project_old_page.html
+++ b/pages/laptop_project_old_page.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <div class="header_project">
+        <a href="../index.html"><img src="../images/ic_home.svg" width="30" height="30" alt="" class="icon_back"></a>
+        <h1 style="text-align: center;">Florist Shop</h1>
+    </div>
     <main>
         <h1>Information</h1>
         <h3>Contain 4 projects:</h3>
