--- a/pages/donut_page.html
+++ b/pages/donut_page.html
@@ -4,20 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>Donuts</title>
 </head>
 
 <body>
-    <p>Note that this is a hobby</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/c0rKh-rxex0?si=y_G0G4wQ8ZOh9ekw"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
-    <p>Made in blender, following Blender Guru tutorial</p>
-    <p>Texture paint for donut base, geometry nodes for sprinkles</p>
+    <div class="header_project">
+        <a href="../index.html"><img src="../images/ic_home.svg" width="30" height="30" alt="" class="icon_back"></a>
+        <h1 style="text-align: center;">Florist Shop</h1>
+    </div>
+    <main>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/c0rKh-rxex0?si=y_G0G4wQ8ZOh9ekw"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <p>Made in blender, following Blender Guru tutorial</p>
+        <p>Texture paint for donut base, geometry nodes for sprinkles</p>
 
-        <h1>Screenshots</h1>
+        <!-- <h1>Video</h1> -->
+        <h2>Screenshots</h2>
+        <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/donuts/donut_1.png" width="200"
+                alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/donuts/donut_2.png" width="200"
+                alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/donuts/donut_3.png" width="200"
+                alt="">
+
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/donuts/donut_4.png" width="200"
+                alt="">
+
+        </div>
+    </main>
 </body>
 
 </html>
