--- a/pages/shooter_game_page.html
+++ b/pages/shooter_game_page.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div class="header_project">
+        <a href="../index.html"><img src="../images/ic_home.svg" width="30" height="30" alt="" class="icon_back"></a>
+        <h1 style="text-align: center;">Florist Shop</h1>
+    </div>
     <main>
         <h1>Information</h1>
         <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
