Update pages header

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
                 <div class="project_item_info">
                     <div>
-                        <h2>Ulmo Shop</h2>
+                        <h2>Furniture Store</h2>
                         <p>Personal Project</p>
                         <div class="project_row">
                             <p>Status:</p>
