--- a/pages/ulmo_project_page.html
+++ b/pages/ulmo_project_page.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header_project">
         <a href="../index.html"><img src="../images/ic_home.svg" width="30" height="30" alt="" class="icon_back"></a>
-        <h1 style="text-align: center;">Florist Shop</h1>
+        <h1 style="text-align: center;">Furniture Store</h1>
     </div>
     <main>
         <h1>Information</h1>
