--- a/pages/laptop_project_old_page.html
+++ b/pages/laptop_project_old_page.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header_project">
         <a href="../index.html"><img src="../images/ic_home.svg" width="30" height="30" alt="" class="icon_back"></a>
-        <h1 style="text-align: center;">Florist Shop</h1>
+        <h1 style="text-align: center;">Laptop Project (old)</h1>
     </div>
     <main>
         <h1>Information</h1>
