--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <p>Personal Project</p>
                         <div class="project_row">
                             <p>Status:</p>
-                            <p>Ongoing</p>
+                            <p class="ongoing">Ongoing</p>
                         </div>
                         <div class="project_row">
                             <p>Start - End:</p>
@@ -98,7 +98,7 @@
                         <p>Personal Project</p>
                         <div class="project_row">
                             <p>Status:</p>
-                            <p>Ongoing</p>
+                            <p class="completed">Finished</p>
                         </div>
                         <div class="project_row">
                             <p>Start - End:</p>
@@ -132,7 +132,7 @@
                         <p>Personal Project</p>
                         <div class="project_row">
                             <p>Status:</p>
-                            <p>Ongoing</p>
+                            <p class="completed">Finished</p>
                         </div>
                         <div class="project_row">
                             <p>Start - End:</p>
@@ -169,7 +169,7 @@
                         <p>Personal Project</p>
                         <div class="project_row">
                             <p>Status:</p>
-                            <p class="Ongoing">Paused</p>
+                            <p class="ongoing">Paused</p>
                         </div>
                         <div class="project_row">
                             <p>Start - End:</p>
@@ -199,7 +199,7 @@
                         <p>Personal Project</p>
                         <div class="project_row">
                             <p>Status:</p>
-                            <p>Finished</p>
+                            <p class="completed">Finished</p>
                         </div>
                         <div class="project_row">
                             <p>Start - End:</p>
@@ -231,7 +231,7 @@
                     <p>Practice</p>
                     <div class="project_row">
                         <p>Status:</p>
-                        <p>Finished</p>
+                        <p class="completed">Finished</p>
                     </div>
                     <div class="project_row">
                         <p>Start - End:</p>
