--- a/pages/donut_page.html
+++ b/pages/donut_page.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header_project">
         <a href="../index.html"><img src="../images/ic_home.svg" width="30" height="30" alt="" class="icon_back"></a>
-        <h1 style="text-align: center;">Donuts/h1>
+        <h1 style="text-align: center;">Donuts</h1>
     </div>
     <main>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/c0rKh-rxex0?si=y_G0G4wQ8ZOh9ekw"
