Create style for screenshots

--- a/pages/donut_page.html
+++ b/pages/donut_page.html
@@ -23,16 +23,12 @@
 
         <!-- <h1>Video</h1> -->
         <h2>Screenshots</h2>
-        <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/donuts/donut_1.png" width="200"
-                alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/donuts/donut_2.png" width="200"
-                alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/donuts/donut_3.png" width="200"
-                alt="">
+        <div class="screenshots">
+            <img src="../images/donuts/donut_1.png" width="200" alt="">
+            <img src="../images/donuts/donut_2.png" width="200" alt="">
+            <img src="../images/donuts/donut_3.png" width="200" alt="">
 
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/donuts/donut_4.png" width="200"
-                alt="">
+            <img src="../images/donuts/donut_4.png" width="200" alt="">
 
         </div>
     </main>
