--- a/pages/shooter_game_page.html
+++ b/pages/shooter_game_page.html
@@ -64,12 +64,8 @@
 
         <!-- <h1>Video</h1> -->
         <h1>Screenshots</h1>
-        <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_1.jpg" width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_2.jpg" width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_3.jpg" width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_4.jpg" width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_5.jpg" width="200" alt="">
+        <div class="Screenshots">
+            <img src="../images/shooter.jpg" width="200" alt="">
         </div>
     </main>
     </main>
