--- a/pages/florist_project_page.html
+++ b/pages/florist_project_page.html
@@ -13,7 +13,7 @@
         <a href="../index.html"><img src="../images/ic_home.svg" width="30" height="30" alt="" class="icon_back"></a>
         <h1 style="text-align: center;">Florist Shop</h1>
     </div>
-    
+
     <main>
         <h2>Information</h2>
         <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
@@ -76,17 +76,12 @@
 
         <!-- <h1>Video</h1> -->
         <h2>Screenshots</h2>
-        <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_1.jpg"
-                width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_2.jpg"
-                width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_3.jpg"
-                width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_4.jpg"
-                width="200" alt="">
-            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_5.jpg"
-                width="200" alt="">
+        <div class="screenshots">
+            <img src="../images/flrorist_shop/florist_shop_1.jpg" width="200" alt="">
+            <img src="../images/flrorist_shop/florist_shop_2.jpg" width="200" alt="">
+            <img src="../images/flrorist_shop/florist_shop_3.jpg" width="200" alt="">
+            <img src="../images/flrorist_shop/florist_shop_4.jpg" width="200" alt="">
+            <img src="../images/flrorist_shop/florist_shop_5.jpg" width="200" alt="">
         </div>
     </main>
     </main>
