--- a/pages/laptop_project_new_page.html
+++ b/pages/laptop_project_new_page.html
@@ -74,7 +74,7 @@
 
         <!-- <h1>Video</h1> -->
         <h1 >Screenshots</h1>
-        <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
+        <div class="screenshots">
             <img src="../images/laptop_project_new/laptop_new_1.jpg" width="200" alt="">
             <img src="../images/laptop_project_new/laptop_new_2.jpg" width="200" alt="">
             <img src="../images/laptop_project_new/laptop_new_3.jpg" width="200" alt="">
