--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                     <p>Seeking for:</p>
                     <p>Intern/Fresher Mobile Developer job</p>
                 </div>
+                <div class="personal_info_row">
+                    <p>Github:</p>
+                    <p><a href="https://github.com/Amirelo" target="_blank">https://github.com/Amirelo</a></p>
+                </div>
             </div>
 
         </div>
@@ -252,7 +256,7 @@
         </section>
     </main>
 
-    <footer style="margin-bottom: 20%;">
+    <!-- <footer style="margin-bottom: 20%;">
         <div style="background-color: black; position:fixed; bottom:0; width: 100%; padding: 12px;">
             <h1 style="color: white;">Contact</h1>
             <p style="color: white;">I am actively looking for Intern/Fresher Mobile Developer job</p>
@@ -267,7 +271,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
